# odooflow

./: .gitignore  LICENSE  PR_DESCRIPTION_0.3.0.md  PR_DESCRIPTION_0.3.1.md  README.md  pyproject.toml  requirements.txt  setup.py
odooflow/: cli.py  config_manager.py  errors.py
odooflow/commands/: clone_module.py  config.py  connect.py  gitlab.py  init_module_env.py  keygen.py  push.py  remote.py  server.py  setup.py  sync_env.py
odooflow/utils/: env.py  server_profile.py  ssh.py
tests/: test_clone_module.py  test_commands_config.py  test_commands_connect.py  test_commands_init_module_env.py  test_commands_keygen.py  test_commands_remote.py  test_commands_server.py  test_commands_sync_env.py  test_config_manager.py  test_gitlab.py  test_server_profile.py  test_utils_env.py  test_utils_ssh.py
