[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odooflow-cli"
version = "0.3.3"
description = "OdooFlow CLI - streamline your Odoo development workflow"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Mohammad A. Hamdan" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "typer[all]",
    "rich",
    "GitPython>=3.1.44",
    "requests>=2.32.3",
    "paramiko>=3.5.1",
    "tqdm>=4.67.1",
    "bcrypt>=4.3.0",
    "cryptography>=45.0.3",
    "PyNaCl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "build>=1.2.2",
    "twine>=6.1.0",
]

[project.urls]
Homepage = "https://github.com/anomalyco/odooflow"
Repository = "https://github.com/anomalyco/odooflow"

[project.scripts]
odooflow = "odooflow.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
